added sorting and pagination